syntax = "proto3";
package project;
option go_package = "project-project/pkg/service/project";

service ProjectService {
  rpc Index(IndexRequest) returns (IndexResponse) {}
  rpc FindProjectByMemId(ProjectRequest) returns (ProjectResponse) {}
  rpc FindProjectTemplate(ProjectRequest) returns (ProjectTemplateResponse){}
  rpc SaveProject(ProjectRequest) returns (SaveProjectResponse){}
  rpc FindProjectDetail(ProjectRequest) returns (ProjectDetailResponse){}
  rpc UpdateDeletedProject(UpdateDeletedRequest) returns (UpdateDeletedResponse){}
  rpc UpdateCollectProject(UpdateCollectRequest) returns (UpdateCollectResponse){}
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse){}
  rpc GetLogBySelfProject(ProjectRequest) returns (ProjectLogResponse){}
  rpc NodeList(ProjectRequest) returns (ProjectNodeListResponse){}
  rpc FindProjectByMemberId(ProjectRequest) returns (FindProjectByMemberIdResponse){}
}

message IndexRequest{
  string token = 1;
}

message IndexResponse{
  repeated MenuMessage menus = 1;
}

message MenuMessage {
  int64  id = 1;
  int64 pid = 2;
  string title = 3;
  string icon = 4;
  string url = 5;
  string filePath = 6;
  string params = 7;
  string node = 8;
  int32 sort = 9;
  int32 status = 10;
  int64 createBy = 11;
  int32 isInner = 12;
  string values = 13;
  int32 showSlider = 14;
  string statusText = 15;
  string innerText = 16;
  string fullUrl = 17;
  repeated MenuMessage children = 18;
}

message ProjectMessage {
  int64 Id = 1;
  string Cover = 2;
  string Name = 3;
  string Description = 4;
  string AccessControlType = 5;
  string WhiteList = 6;
  int32 Order = 7;
  int32 Deleted = 8;
  string TemplateCode = 9;
  double Schedule = 10;
  string CreateTime = 11;
  string OrganizationCode = 12;
  string DeletedTime = 13;
  int32 Private = 14;
  string Prefix = 15;
  int32 OpenPrefix = 16;
  int32 Archive = 17;
  int64 ArchiveTime = 18;
  int32 OpenBeginTime = 19;
  int32 OpenTaskPrivate = 20;
  string TaskBoardTheme = 21;
  string BeginTime = 22;
  string EndTime = 23;
  int32 AutoUpdateSchedule = 24;
  int64 ProjectCode = 25;
  int64 MemberCode = 26;
  string JoinTime = 27;
  int64 IsOwner = 28;
  string Authorize = 29;
  string code = 30;
  string ownerName = 31;
  int32 collected = 32;
}

message ProjectRequest{
  int64 memberId = 1;
  string memberName = 2;
  int64 page = 3;
  int64 pageSize = 4;
  string selectBy = 5;
  string organizationCode = 6;
  int32 viewType = 7;
  string name = 8;
  string templateCode = 9;
  string description = 10;
  int64 id = 11;
  string projectCode = 12;
  string taskCode = 13;
}
message ProjectResponse{
  repeated ProjectMessage pm = 1;
  int64 total = 2;
}

message ProjectTemplateMessage{
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 sort = 4;
  string createTime = 5;
  string organizationCode = 6;
  string cover = 7;
  string memberCode = 8;
  int32 isSystem = 9;
  repeated TaskStages taskStages = 10;
  string code = 11;
}
message TaskStages{
  string name = 1;
}
message ProjectTemplateResponse{
  repeated ProjectTemplateMessage ptm = 1;
  int64  Total = 2;
}

message SaveProjectResponse {
  int64 Id = 1;
  string Cover = 2;
  string Name = 3;
  string Description = 4;
  string Code = 5;
  string CreateTime = 6;
  string TaskBoardTheme = 7;
  string OrganizationCode = 8;
}


message ProjectDetailResponse {
  string Cover = 1;
  string Name = 2;
  string Description = 3;
  string AccessControlType = 4;
  string WhiteList = 5;
  int32 Order = 6;
  int32 Deleted = 7;
  string TemplateCode = 8;
  double Schedule = 9;
  string CreateTime = 10;
  string OrganizationCode = 11;
  string DeletedTime = 12;
  int32 Private = 13;
  string Prefix = 14;
  int32 OpenPrefix = 15;
  int32 Archive = 16;
  int64 ArchiveTime = 17;
  int32 OpenBeginTime = 18;
  int32 OpenTaskPrivate = 19;
  string TaskBoardTheme = 20;
  string BeginTime = 21;
  string EndTime = 22;
  int32 AutoUpdateSchedule = 23;
  string code = 24;
  string ownerName = 25;
  int32 collected = 26;
  string ownerAvatar = 27;
}

message UpdateDeletedRequest{
  string ProjectCode = 1;
  bool Deleted = 2;
}
message UpdateDeletedResponse{}

message UpdateCollectRequest{
  string ProjectCode = 1;
  int64 MemberId = 2;
  string CollectType = 3;
}
message UpdateCollectResponse{}

message UpdateProjectRequest{
  string projectCode = 1;
  string Cover = 2;
  string Name = 3;
  string Description = 4;
  double Schedule = 5;
  int32 Private = 6;
  string Prefix = 7;
  int32 OpenPrefix = 8;
  int32 OpenBeginTime = 9;
  int32 OpenTaskPrivate = 10;
  string TaskBoardTheme = 11;
  int32 AutoUpdateSchedule = 12;
  int64 MemberId = 13;
}
message UpdateProjectResponse{}

message ProjectLogMessage{
  string Content  = 1;
  string Remark       = 2;
  string CreateTime    = 3;
  string SourceCode    = 4;
  int32 IsComment       = 5;
  string ProjectCode   = 6;
  string ProjectName   =7;
  string MemberAvatar  =8;
  string MemberName   =9;
  string TaskName      = 10;
}
message ProjectLogResponse{
  repeated ProjectLogMessage list = 1;
  int64 total = 2;
}


message ProjectNodeMessage{
  int64 id = 1;
  string node = 2;
  string title = 3;
  string pnode = 4;
  int32 isLogin = 5;
  int32 isMenu = 6;
  int32 isAuth = 7;
  repeated ProjectNodeMessage children = 8;
}
message ProjectNodeListResponse {
  repeated ProjectNodeMessage nodes = 1;
}

message FindProjectByMemberIdResponse{
  ProjectMessage project = 1;
  bool isMember = 2;
  bool isOwner = 3;
}